--- a/css/style.css
+++ b/css/style.css
@@ -113,8 +113,10 @@ a { text-decoration: none; color: inherit; }
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: right center; /* ←追加！右寄りトリミング */
   display: block;
 }
+
 .ph--small { height: 200px; }
 
 /* worry */
