--- a/css/style.css
+++ b/css/style.css
@@ -236,4 +236,8 @@ a { text-decoration: none; color: inherit; }
   transform: scale(0.9) !important;
   transform-origin: right center !important;
 }
+/* ★CSS効いてるかテスト★ */
+.ba__box{
+  outline: 6px solid red !important;
+}
 
